gcc/testsuite/rust/rustc/ui/suggestions/suggest-on-bare-closure-call.rs
fn main() {
    let _ = ||{}();
// { dg-error ".E0618." "" { target *-*-* } .-1 }
}

